src/objects/Apttus_Billing__BillingMetrics__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Billing__DaySalesOutstanding__c</fullName>
        <description>This field will store DSO value Month wise</description>
        <inlineHelpText>This field store&apos;s DSO value Month wise</inlineHelpText>
        <label>Day Sales Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__MonthYearDate__c</fullName>
        <description>Store date equivalent for month year</description>
        <label>MonthYearDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__MonthYear__c</fullName>
        <description>Stores Month-Year Combination For Calculated DSO Value</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores Month-Year Combination For Calculated DSO Value</inlineHelpText>
        <label>Month Year</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Quarter__c</fullName>
        <formula>Apttus_Billing__MonthYearDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Type__c</fullName>
        <description>Store type of DSO</description>
        <inlineHelpText>Stores type value of DSO</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Year__c</fullName>
        <description>Year for current summary metric record derive value from field Month Year</description>
        <formula>Apttus_Billing__MonthYearDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Date</type>
    </fields>
    <label>Billing Metric</label>
    <nameField>
        <displayFormat>BM-{00000000}</displayFormat>
        <label>BillingMetrics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>